# ARGUS

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TRIAL_UI_SPEC.md  log.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Cursor_Tests/: content_review_pipeline.py  test_llm_override.py
benchmarks/: run_benchmark.py
benchmarks/cases/: __init__.py  base.py  clean_runs.py  crashes.py  multi_hop.py  semantic_failures.py  silent_failures.py
benchmarks/results/: report.json
demo/: coherence_demo.py
demo_cycle/: run.py
examples/: langchain_fifteen_agent_pipeline.py
fixtures/: README.md
fixtures/unverified_completion/: fixture_spec.md
real_benchmarks/: probe_blind_spots.py  run_real_benchmark.py
real_benchmarks/results/: real_report.json
real_benchmarks/workflows/: w1_support_triage.py  w2_rag_qa.py  w3_code_review.py  w4_data_etl.py  w5_research_agent.py
scripts/: build_ui.sh  verify_learning_loop.py
src/argus/: __init__.py  anomaly_detector.py  candidate_store.py  checkpoints.py  cloud.py  correlator.py  embedding_store.py  feedback_store.py  heuristic_disambiguator.py  heuristic_engine.py  http_recorder.py  inspector.py  llm_correlator.py  llm_investigator.py  llm_proxy.py  llm_tracker.py  loop_analyzer.py  models.py  patcher.py  pricing.py  registry.py  replay.py  semantic_checker.py  session.py  signature_generalizer.py  signature_stats.py  source_locator.py  storage.py  watcher.py
src/argus/cli/: __init__.py  cmd_diff.py  cmd_doctor.py  cmd_locate.py  cmd_login.py  cmd_open_ui.py  (+5 more)
supabase/: migration.sql
test_workflow/: __init__.py  agents.py  graph.py  run_silent_failure.py  state.py
tests/: run_with_argus.py  test_db_flow.py  test_false_positives.py  test_inspector.py  test_integration.py  test_interrupt.py  test_langgraph_pipeline.py  test_learning_loop_e2e.py  test_models.py  test_patcher.py  test_semantic_similarity.py  test_serializer.py  test_session.py  test_signature_generalizer.py  test_signature_stats.py  test_smoke.py  test_source_locator.py  test_storage.py  test_tool_failures.py  test_validators.py
ultimatum/: agents.py  pipeline.py  run_all.py  run_clean.py  run_cyclic.py  run_interrupt.py  run_replay.py  run_semantic_fail.py  run_silent_fail.py  state.py  validators.py
website/: .gitignore  .mcp.json  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
website/app/: error.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
website/components/: CliLogViewer.tsx  CliRunView.tsx  EvalBadge.tsx  EvaluationBuilder.tsx  JsonViewer.tsx  RunDetailPanel.tsx  RunDetailView.tsx  RunListPanel.tsx  RunTable.tsx  SendReportDialog.tsx  Sidebar.tsx  StatusBadge.tsx  StepCard.tsx  Topbar.tsx
website/data/: index.json
website/lib/: auth.tsx  data.ts  failure-labels.ts  hooks.ts  run-utils.ts  supabase.ts  topology.ts  types.ts  use-split-panel.ts
(+355 files in other folders)
