[project]
name = "argus-agents"
version = "0.1.0"
description = "Silent watcher for LangGraph multiagent pipelines — detects silent failures, captures full state, enables step-level replay."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
argus = "argus.cli.main:app"

[project.urls]
Repository = "https://github.com/varaddurge/argus-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
files = ["src/argus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
