[project]
name = "argus-agents"
version = "0.2.2"
description = "Silent watcher for LangGraph multiagent pipelines — detects silent failures, captures full state, enables step-level replay."
readme = "README.md"
license = { text = "LicenseRef-Varad-NonCommercial-1.0" }
requires-python = ">=3.9"
authors = [{ name = "Varad Durge", email = "varaddurge@gmail.com" }]
keywords = ["langgraph", "multiagent", "monitoring", "observability", "debugging", "silent-failures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "langgraph>=0.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
examples = [
    "langchain-core>=0.3.0",
]

[project.scripts]
argus = "argus.cli.main:app"

[project.urls]
Homepage = "https://github.com/VaradDurge/ARGUS"
Repository = "https://github.com/VaradDurge/ARGUS"
Issues = "https://github.com/VaradDurge/ARGUS/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP045"]  # str | None syntax requires Python 3.10+; we support 3.9

[tool.mypy]
strict = true
files = ["src/argus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
